Add attribution correction actions
